# traader_company_method

./:  README.md  LICENSE  README.md  experiment.ipynb  pyproject.toml  simple_prediction.ipynb
tc_method/: core.py  interface.py  sampler.py
